--- a/public/contact.html
+++ b/public/contact.html
@@ -7,14 +7,11 @@
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Sample Page</title>
+    <title>Contact Page</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Contact page!</h1>
     <button type="button" class="btn btn-primary">Primary</button>
-    <div class="container">
-  <p> Hi Karthick </p>
-</div>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
