--- a/public/scrollspy.html
+++ b/public/scrollspy.html
@@ -8,16 +8,19 @@
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
     <title>Sample Page</title>
+    <style>
+      /*#navbar-example2{
+        position:fixed;
+          width: 100%;
+      }*/
+      body {
+        position: relative;
+      }
+
+    </style>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <div class="container">
-  <p> Hi Karthick </p>
-</div>
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
   </body>
