--- a/public/index.html
+++ b/public/index.html
@@ -1,24 +1,130 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
 
-    <title>Sample Page</title>
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <button type="button" class="btn btn-primary">Primary</button>
-    <div class="container">
-  <p> Hi Karthick </p>
-</div>
+  <title>Sample Page</title>
+  <style>
+    .bgimg-1,
+    .bgimg-2,
+    .bgimg-3 {
+      position: relative;
+      /*opacity: 0.65;*/
+      height: 250px;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
-  </body>
+    .bgimg-1 {
+      background-image: url("images/2.png");
+      min-height: 100%;
+    }
+
+    .bgimg-2 {
+      background-image: url("images/2.png");
+      min-height: 100px;
+    }
+
+    .bgimg-3 {
+      background-image: url("images/2.png");
+      min-height: 100px;
+    }
+
+    .padding {
+      padding-top: 25px;
+      padding-bottom: 25px;
+    }
+
+    .caption {
+      position: absolute;
+      left: 0;
+      top: 50%;
+      width: 100%;
+      text-align: center;
+      color: #000;
+    }
+
+    .header {
+      padding: 10px 16px;
+      background: #fff;
+      color: #f1f1f1;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      background-color: rgba (256, 256, 256, 0.7);
+    }
+
+    .navbar-fixed-top {
+      position: fixed;
+      right: 0;
+      left: 0;
+      z-index: 1030;
+    }
+
+    .navbar-default {
+      background-color: #fff;
+      border-color: #e7e7e7;
+    }
+
+    .navbar-fixed-top {
+      top: 0;
+      border-width: 0 0 1px;
+    }
+  </style>
+</head>
+
+<body>
+  <nav class="navbar justify-content-center navbar-light navbar-default navbar-fixed-top">
+    <ul class="nav nav-tabs ">
+      <li class="nav-item ">
+        <a class="nav-link active" href="# ">ABOUT</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link" href="# ">EXPERIENCE</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link " href="# ">SKILLS</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link " href="# ">EDUCATION</a>
+      </li>
+      <li class="nav-item ">
+        <a class="nav-link " href="# ">INTERESTS</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="bgimg-1 "></div>
+  <div class="row padding bg-primary ">
+    <div class="col-sm text-center text-white ">
+      <h1 class="display-4 ">Karthick Arunachalam</h1>
+      <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    </div>
+  </div>
+
+  <div class="bgimg-2 ">
+    <div class="caption ">
+      <span class="badge badge-primary border-primary border " style="padding-bottom:10px; padding-top:10px;adding-right:10px; padding-left:10px; ">SCROLL DOWN</span>
+    </div>
+  </div>
+
+
+
+
+
+
+
+
+  <!-- Optional JavaScript -->
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
+</body>
+
 </html>
