adding scroll spy and some dummy contents

--- a/public/index.html
+++ b/public/index.html
@@ -7,112 +7,92 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/site.css">
+  <title>Karthick Arunachalam</title>
 
-  <title>Sample Page</title>
-  <style>
-    .bgimg-1,
-    .bgimg-2,
-    .bgimg-3 {
-      position: relative;
-      /*opacity: 0.65;*/
-      height: 250px;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-size: cover;
-    }
-
-    .bgimg-1 {
-      background-image: url("images/2.png");
-      min-height: 100%;
-    }
-
-    .bgimg-2 {
-      background-image: url("images/2.png");
-      min-height: 100px;
-    }
-
-    .bgimg-3 {
-      background-image: url("images/2.png");
-      min-height: 100px;
-    }
-
-    .padding {
-      padding-top: 25px;
-      padding-bottom: 25px;
-    }
-
-    .caption {
-      position: absolute;
-      left: 0;
-      top: 50%;
-      width: 100%;
-      text-align: center;
-      color: #000;
-    }
-
-    .header {
-      padding: 10px 16px;
-      background: #fff;
-      color: #f1f1f1;
-      position: fixed;
-      top: 0;
-      width: 100%;
-      background-color: rgba (256, 256, 256, 0.7);
-    }
-
-    .navbar-fixed-top {
-      position: fixed;
-      right: 0;
-      left: 0;
-      z-index: 1030;
-    }
-
-    .navbar-default {
-      background-color: #fff;
-      border-color: #e7e7e7;
-    }
-
-    .navbar-fixed-top {
-      top: 0;
-      border-width: 0 0 1px;
-    }
-  </style>
 </head>
 
-<body>
-  <nav class="navbar justify-content-center navbar-light navbar-default navbar-fixed-top">
+<body data-spy="scroll" data-target="#navbar-karthick" data-offset="50">
+  <nav id="navbar-karthick" class="navbar justify-content-center navbar-light navbar-default navbar-fixed-top">
     <ul class="nav nav-tabs ">
       <li class="nav-item ">
-        <a class="nav-link active" href="# ">ABOUT</a>
+        <a class="nav-link active" href="#about">ABOUT</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="# ">EXPERIENCE</a>
+        <a class="nav-link" href="#experience">EXPERIENCE</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link " href="# ">SKILLS</a>
+        <a class="nav-link" href="#skills">SKILLS</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link " href="# ">EDUCATION</a>
+        <a class="nav-link" href="#education">EDUCATION</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link " href="# ">INTERESTS</a>
+        <a class="nav-link" href="#interests">INTERESTS</a>
       </li>
     </ul>
   </nav>
-  <div class="bgimg-1 "></div>
-  <div class="row padding bg-primary ">
-    <div class="col-sm text-center text-white ">
-      <h1 class="display-4 ">Karthick Arunachalam</h1>
-      <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
-    </div>
-  </div>
 
-  <div class="bgimg-2 ">
-    <div class="caption ">
-      <span class="badge badge-primary border-primary border " style="padding-bottom:10px; padding-top:10px;adding-right:10px; padding-left:10px; ">SCROLL DOWN</span>
+
+  <div>
+
+    <h4 id="about" class="section-padding">ABOUT</h4>
+    <div class="bgimg-1 "> </div>
+    <div class="row padding bg-primary ">
+      <div class="col-sm text-center text-white ">
+        <h1 class="display-4 ">Karthick Arunachalam</h1>
+        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      </div>
+    </div>
+
+    <h4 id="experience" class="section-padding">EXPERIENCE</h4>
+    <div class="bgimg-1 "></div>
+    <div class="row padding bg-primary ">
+      <div class="col-sm text-center text-white ">
+        <h1 class="display-4 ">Karthick Arunachalam</h1>
+        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      </div>
+    </div>
+
+    <h4 id="skills" class="section-padding">SKILLS</h4>
+    <div class="bgimg-1 "></div>
+    <div class="row padding bg-primary ">
+      <div class="col-sm text-center text-white ">
+        <h1 class="display-4 ">Karthick Arunachalam</h1>
+        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      </div>
+    </div>
+
+    <h4 id="education" class="section-padding">EDUCATION</h4>
+    <div class="bgimg-1 "></div>
+    <div class="row padding bg-primary ">
+      <div class="col-sm text-center text-white ">
+        <h1 class="display-4 ">Karthick Arunachalam</h1>
+        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      </div>
+    </div>
+
+    <h4 id="interests" class="section-padding">INTERESTS</h4>
+    <div class="bgimg-1 "></div>
+    <div class="row padding bg-primary ">
+      <div class="col-sm text-center text-white ">
+        <h1 class="display-4 ">Karthick Arunachalam</h1>
+        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      </div>
     </div>
   </div>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
+  </br>
 
 
 
@@ -123,6 +103,7 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
 </body>
