adding pills to navs and changing default pill color and adding border

--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,22 @@
 </head>
 
 <body data-spy="scroll" data-target="#navbar-karthick" data-offset="50">
-  <nav id="navbar-karthick" class="navbar justify-content-center navbar-light navbar-default navbar-fixed-top">
-    <ul class="nav nav-tabs ">
+  <nav id="navbar-karthick" class="navbar nav-pills justify-content-center border-bottom border-primary navbar-light navbar-default navbar-fixed-top">
+    <ul class="nav nav-tabs text-white">
       <li class="nav-item ">
-        <a class="nav-link active" href="#about">ABOUT</a>
+        <a class="nav-link active" id="nav-about" href="#about">ABOUT</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#experience">EXPERIENCE</a>
+        <a class="nav-link" id="nav-exp" href="#experience">EXPERIENCE</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#skills">SKILLS</a>
+        <a class="nav-link" id="nav-skills" href="#skills">SKILLS</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#education">EDUCATION</a>
+        <a class="nav-link" id="nav-edu" href="#education">EDUCATION</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" href="#interests">INTERESTS</a>
+        <a class="nav-link" id="nav-int" href="#interests">INTERESTS</a>
       </li>
     </ul>
   </nav>
@@ -106,6 +106,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
+
 </body>
 
 </html>
