adding updates, adding animated efect, adding new template

--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,12 @@
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/site.css">
+
   <title>Karthick Arunachalam</title>
 
 </head>
 
-<body data-spy="scroll" data-target="#navbar-karthick" data-offset="50">
+<body data-spy="scroll" data-target="#navbar-karthick" data-offset="0">
   <nav id="navbar-karthick" class="navbar nav-pills justify-content-center border-bottom border-primary navbar-light navbar-default navbar-fixed-top">
     <ul class="nav nav-tabs text-white">
       <li class="nav-item ">
@@ -35,49 +36,57 @@
 
 
   <div>
-
-    <h4 id="about" class="section-padding">ABOUT</h4>
-    <div class="bgimg-1 "> </div>
-    <div class="row padding bg-primary ">
-      <div class="col-sm text-center text-white ">
-        <h1 class="display-4 ">Karthick Arunachalam</h1>
-        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container container-color section-padding" id="about">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">ABOUT</button>
+      <div class="bgimg-1 "> </div>
+      <div class="row padding bg-primary ">
+        <div class="col-sm text-center text-white ">
+          <h1 class="display-4 ">Karthick Arunachalam</h1>
+          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+        </div>
       </div>
     </div>
 
-    <h4 id="experience" class="section-padding">EXPERIENCE</h4>
-    <div class="bgimg-1 "></div>
-    <div class="row padding bg-primary ">
-      <div class="col-sm text-center text-white ">
-        <h1 class="display-4 ">Karthick Arunachalam</h1>
-        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container container-color section-padding" id="experience">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">EXPERIENCE</button>
+      <div class="bgimg-1 "> </div>
+      <div class="row padding bg-primary">
+        <div class="col-sm text-center text-white ">
+          <h1 class="display-4 ">Karthick Arunachalam</h1>
+          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+        </div>
       </div>
     </div>
 
-    <h4 id="skills" class="section-padding">SKILLS</h4>
-    <div class="bgimg-1 "></div>
-    <div class="row padding bg-primary ">
-      <div class="col-sm text-center text-white ">
-        <h1 class="display-4 ">Karthick Arunachalam</h1>
-        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container container-color section-padding" id="skills">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">SKILLS</button>
+      <div class="bgimg-1 "></div>
+      <div class="row padding bg-primary ">
+        <div class="col-sm text-center text-white ">
+          <h1 class="display-4 ">Karthick Arunachalam</h1>
+          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+        </div>
       </div>
     </div>
 
-    <h4 id="education" class="section-padding">EDUCATION</h4>
-    <div class="bgimg-1 "></div>
-    <div class="row padding bg-primary ">
-      <div class="col-sm text-center text-white ">
-        <h1 class="display-4 ">Karthick Arunachalam</h1>
-        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container container-color section-padding " id="education">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">EDUCATION</button>
+      <div class="bgimg-1 "></div>
+      <div class="row padding bg-primary ">
+        <div class="col-sm text-center text-white ">
+          <h1 class="display-4 ">Karthick Arunachalam</h1>
+          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+        </div>
       </div>
     </div>
-
-    <h4 id="interests" class="section-padding">INTERESTS</h4>
-    <div class="bgimg-1 "></div>
-    <div class="row padding bg-primary ">
-      <div class="col-sm text-center text-white ">
-        <h1 class="display-4 ">Karthick Arunachalam</h1>
-        <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container container-color section-padding " id="interests">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">INTERESTS</button>
+      <div class="bgimg-1 "></div>
+      <div class="row padding bg-primary ">
+        <div class="col-sm text-center text-white ">
+          <h1 class="display-4 ">Karthick Arunachalam</h1>
+          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+        </div>
       </div>
     </div>
   </div>
@@ -100,12 +109,11 @@
 
 
 
-
-  <!-- Optional JavaScript -->
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/site.js "></script>
 
 </body>
 
