Updating my project with additional features

--- a/public/index.html
+++ b/public/index.html
@@ -15,30 +15,30 @@
 
 <body data-spy="scroll" data-target="#navbar-karthick" data-offset="0">
   <nav id="navbar-karthick" class="navbar nav-pills justify-content-center border-bottom border-primary navbar-light navbar-default navbar-fixed-top">
-    <ul class="nav nav-tabs text-white">
+    <ul class="nav nav-tabs">
       <li class="nav-item ">
-        <a class="nav-link active" id="nav-about" href="#about">ABOUT</a>
+        <a class="nav-link text-orange active" id="nav-about" href="#about">ABOUT</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" id="nav-exp" href="#experience">EXPERIENCE</a>
+        <a class="nav-link text-orange" id="nav-exp" href="#experience">EXPERIENCE</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" id="nav-skills" href="#skills">SKILLS</a>
+        <a class="nav-link text-orange" id="nav-skills" href="#skills">SKILLS</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" id="nav-edu" href="#education">EDUCATION</a>
+        <a class="nav-link text-orange" id="nav-edu" href="#education">EDUCATION</a>
       </li>
       <li class="nav-item ">
-        <a class="nav-link" id="nav-int" href="#interests">INTERESTS</a>
+        <a class="nav-link text-orange" id="nav-int" href="#interests">INTERESTS</a>
       </li>
     </ul>
   </nav>
 
 
   <div>
-    <div class="container container-color section-padding" id="about">
+    <div class="container-color section-padding" id="about">
       <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">ABOUT</button>
-      <div class="bgimg-1 "> </div>
+      <div class="bgimg-1"> </div>
       <div class="row padding bg-primary ">
         <div class="col-sm text-center text-white ">
           <h1 class="display-4 ">Karthick Arunachalam</h1>
@@ -47,19 +47,55 @@
       </div>
     </div>
 
-    <div class="container container-color section-padding" id="experience">
+    <div class="container-color section-padding" id="experience">
       <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">EXPERIENCE</button>
       <div class="bgimg-1 "> </div>
-      <div class="row padding bg-primary">
-        <div class="col-sm text-center text-white ">
-          <h1 class="display-4 ">Karthick Arunachalam</h1>
-          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+      <div class="row padding card-padding bg-azure" style="padding-left:70px; padding-right:70px;">
+        <div class="col-sm card-padding">
+          <div class="row border border-warning card-padding">
+            <div class="col-sm">
+              <div class="container bg-azure card-padding" style="padding-left:110px;">
+                <div class="card border-warning" style="width: 19rem;">
+                  <img class="card-img-top" src="assets/images/sts.jpg" alt="Card image cap">
+                  <div class="card-body card-padding">
+                    <h5 class="card-title">Test Automation Engineer II</h5>
+                    <p class="card-text">Currently working as a Test Automation Engineer. I belongs to PCH Agile team. </p>
+                    <p class="card-text">27th Dec, 2016 - Present</p>
+                    <button id="more-button" class="btn btn-primary">More Info</button>
+                  </div>
+                </div>
+              </div>
+              <div class="container-sm">
+                <nav aria-label="...">
+                  <ul class="pagination pagination-md justify-content-center">
+                    <li class="page-item disabled border border-warning">
+                      <a class="page-link" href="# " tabindex="-1 ">1</a>
+                    </li>
+                    <li class="page-item border border-warning"><a class="page-link " href="# ">2</a></li>
+                  </ul>
+                </nav>
+              </div>
+            </div>
+            <div class="col-sm ">
+              <div class="container bg-azure card-padding " id="project-summary ">
+                <h3>Project Summary</h3>
+                <h4>Publishers Clearning House</h4>
+                <p>Publishers Clearing House is a direct marketing company that markets merchandise and magazine subscriptions with sweepstakes, and prize-based games.</p>
+                <p>
+                  I've been a part of PCH.com, PCH Lotto Legacy & PCH Lotto Destination Agile projects (Automation), few of many different properties in PCH.</p>
+                <p>
+                  I've worked on different tools and technologies which includes <strong><em>Selenium, Java, Serenity, WebdriverIO, JavaScript, NodeJS, Mocha/Chai, JBehave, TestNG, JUnit4, Sikuli, AutoIT, REST Client, Joomla, MS SQL, ALM,</em></strong>                  and so on.</p>
+
+              </div>
+            </div>
+
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="container container-color section-padding" id="skills">
-      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">SKILLS</button>
+    <div class="container-color section-padding " id="skills ">
+      <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">SKILLS</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
         <div class="col-sm text-center text-white ">
@@ -69,8 +105,8 @@
       </div>
     </div>
 
-    <div class="container container-color section-padding " id="education">
-      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">EDUCATION</button>
+    <div class="container-color section-padding " id="education ">
+      <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">EDUCATION</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
         <div class="col-sm text-center text-white ">
@@ -79,8 +115,8 @@
         </div>
       </div>
     </div>
-    <div class="container container-color section-padding " id="interests">
-      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">INTERESTS</button>
+    <div class="container-color section-padding " id="interests ">
+      <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">INTERESTS</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
         <div class="col-sm text-center text-white ">
@@ -109,11 +145,29 @@
 
 
 
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
   <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
   <script src="assets/site.js "></script>
+  <script>
+    var moreButton = document.getElementById("more-button ");
+    var project = document.getElementById("project-summary ");
+    window.onload = function() {
+      project.style.visibility = 'hidden';
+    }
+    moreButton.onclick = function() {
+      if (project.getAttribute('style') == 'visibility: hidden;') {
+        project.className = 'show';
+        project.style.visibility = 'visible';
+        moreButton.innerHTML = 'Less Info';
+      } else {
+        project.className = '';
+        project.style.visibility = 'hidden';
+        moreButton.innerHTML = 'More Info';
+      }
+    }
+  </script>
 
 </body>
 
