completing experience module and all functionality looks good in this commit

--- a/public/index.html
+++ b/public/index.html
@@ -13,22 +13,22 @@
 
 </head>
 
-<body data-spy="scroll" data-target="#navbar-karthick" data-offset="0">
+<body data-spy="scroll" data-target="#navbar-karthick" data-offset="50">
   <nav id="navbar-karthick" class="navbar nav-pills justify-content-center border-bottom border-primary navbar-light navbar-default navbar-fixed-top">
     <ul class="nav nav-tabs">
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link text-orange active" id="nav-about" href="#about">ABOUT</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link text-orange" id="nav-exp" href="#experience">EXPERIENCE</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link text-orange" id="nav-skills" href="#skills">SKILLS</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link text-orange" id="nav-edu" href="#education">EDUCATION</a>
       </li>
-      <li class="nav-item ">
+      <li class="nav-item">
         <a class="nav-link text-orange" id="nav-int" href="#interests">INTERESTS</a>
       </li>
     </ul>
@@ -50,51 +50,85 @@
     <div class="container-color section-padding" id="experience">
       <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">EXPERIENCE</button>
       <div class="bgimg-1 "> </div>
-      <div class="row padding card-padding bg-azure" style="padding-left:70px; padding-right:70px;">
+      <div class="row padding card-padding bg-azure exp-pad rowbg">
         <div class="col-sm card-padding">
-          <div class="row border border-warning card-padding">
+          <div class="row border border-warning card-padding shadow" style="background-color:	#FFFFE0;" id="sts">
             <div class="col-sm">
-              <div class="container bg-azure card-padding" style="padding-left:110px;">
+              <div class="container bg-azure card-padding shadow border border-warning bg-card" style="padding-left:110px;">
                 <div class="card border-warning" style="width: 19rem;">
                   <img class="card-img-top" src="assets/images/sts.jpg" alt="Card image cap">
                   <div class="card-body card-padding">
                     <h5 class="card-title">Test Automation Engineer II</h5>
                     <p class="card-text">Currently working as a Test Automation Engineer. I belongs to PCH Agile team. </p>
                     <p class="card-text">27th Dec, 2016 - Present</p>
-                    <button id="more-button" class="btn btn-primary">More Info</button>
+                    <button id="more-button1" class="btn btn-primary">More Info</button>
                   </div>
                 </div>
               </div>
-              <div class="container-sm">
-                <nav aria-label="...">
-                  <ul class="pagination pagination-md justify-content-center">
-                    <li class="page-item disabled border border-warning">
-                      <a class="page-link" href="# " tabindex="-1 ">1</a>
-                    </li>
-                    <li class="page-item border border-warning"><a class="page-link " href="# ">2</a></li>
-                  </ul>
-                </nav>
-              </div>
             </div>
-            <div class="col-sm ">
-              <div class="container bg-azure card-padding " id="project-summary ">
+            <div class="col-sm">
+              <div class="container bg-azure card-padding shadow" id="project-summary1">
                 <h3>Project Summary</h3>
-                <h4>Publishers Clearning House</h4>
+                <h4>PUBLISHERS CLEARING HOUSE</h4>
                 <p>Publishers Clearing House is a direct marketing company that markets merchandise and magazine subscriptions with sweepstakes, and prize-based games.</p>
                 <p>
                   I've been a part of PCH.com, PCH Lotto Legacy & PCH Lotto Destination Agile projects (Automation), few of many different properties in PCH.</p>
                 <p>
-                  I've worked on different tools and technologies which includes <strong><em>Selenium, Java, Serenity, WebdriverIO, JavaScript, NodeJS, Mocha/Chai, JBehave, TestNG, JUnit4, Sikuli, AutoIT, REST Client, Joomla, MS SQL, ALM,</em></strong>                  and so on.</p>
+                  I've worked on different tools and technologies which includes <strong><em>Selenium, Java, Serenity, WebdriverIO, JavaScript, NodeJS, Mocha/Chai, JBehave, Jenkins, TestNG, JUnit4, Sikuli, AutoIT, REST Client, Joomla, MS SQL, ALM,</em></strong>                  and so on.</p>
 
               </div>
             </div>
 
           </div>
+
+          <div class="row border border-warning card-padding shadow" style="background-color:	#FFFFE0;" id="cts">
+            <div class="col-sm">
+              <div class="container bg-azure card-padding shadow border border-warning bg-card" style="padding-left:110px;">
+                <div class="card border-warning" style="width: 19rem;">
+                  <img class="card-img-top" src="assets/images/cts.png" alt="Card image cap">
+                  <div class="card-body card-padding">
+                    <h5 class="card-title">Programmer</h5>
+                    <p class="card-text">I Joined as a fresher, and worked as a Programmer. I've been a part of CK Automation Team.</p>
+                    <p class="card-text">31st July, 2014 - 23rd December, 2016</p>
+                    <button id="more-button2" class="btn btn-primary">More Info</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm">
+              <div class="container bg-azure card-padding " id="project-summary2">
+                <h3>Project Summary</h3>
+                <h4>ELSEVIER</h4>
+                <p>Elsevier is an information and analytics company and one of the world's major providers of scientific, technical, and medical information. It was established in 1880 as a publishing company.</p>
+                <p>
+                  I've been a part of Clinicalkey, Pharmacology Automation teams, and an active contributor of Innovation excellence team of Elsevier.</p>
+                <p>
+                  I've worked on different tools and technologies which includes <strong><em>Selenium, Java, ANT, Cucumber, JBehave, TestNG, JUnit4, Jenkins, REST Client, MS SQL, JIRA,</em></strong> and so on.</p>
+
+              </div>
+            </div>
+
+          </div>
+
+
+
+          <div class="container-sm" style="padding-top:5px;">
+            <nav aria-label="company">
+              <ul class="pagination pagination-md justify-content-center">
+                <li class="page-item border border-warning">
+                  <a class="page-link" onclick="showSTSPage()" href="#sts" tabindex="-1">1</a>
+                </li>
+                <li class="page-item border border-warning">
+                  <a class="page-link" onclick="showCTSPage()" href="#cts">2</a>
+                </li>
+              </ul>
+            </nav>
+          </div>
         </div>
       </div>
     </div>
 
-    <div class="container-color section-padding " id="skills ">
+    <div class="container-color section-padding " id="skills">
       <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">SKILLS</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
@@ -105,7 +139,7 @@
       </div>
     </div>
 
-    <div class="container-color section-padding " id="education ">
+    <div class="container-color section-padding " id="education">
       <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">EDUCATION</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
@@ -115,7 +149,7 @@
         </div>
       </div>
     </div>
-    <div class="container-color section-padding " id="interests ">
+    <div class="container-color section-padding " id="interests">
       <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">INTERESTS</button>
       <div class="bgimg-1 "></div>
       <div class="row padding bg-primary ">
@@ -151,20 +185,50 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
   <script src="assets/site.js "></script>
   <script>
-    var moreButton = document.getElementById("more-button ");
-    var project = document.getElementById("project-summary ");
-    window.onload = function() {
-      project.style.visibility = 'hidden';
+    var moreButton1 = document.getElementById("more-button1");
+    var moreButton2 = document.getElementById("more-button2");
+    var project1 = document.getElementById("project-summary1");
+    var project2 = document.getElementById("project-summary2");
+    var page1 = document.getElementById("sts");
+    var page2 = document.getElementById("cts");
+    var nav1 = $("[href*='sts']");
+    var nav2 = $("[href*='cts']");
+
+    function showCTSPage() {
+      page1.style.display = 'none';
+      page2.style.display = '';
     }
-    moreButton.onclick = function() {
-      if (project.getAttribute('style') == 'visibility: hidden;') {
-        project.className = 'show';
-        project.style.visibility = 'visible';
-        moreButton.innerHTML = 'Less Info';
+
+    function showSTSPage() {
+      page1.style.display = '';
+      page2.style.display = 'none';
+    }
+
+    window.onload = function() {
+      project1.style.visibility = 'hidden';
+      project2.style.visibility = 'hidden';
+      page2.style.display = 'none';
+    }
+    moreButton1.onclick = function() {
+      if (project1.getAttribute('style') == 'visibility: hidden;') {
+        project1.className = 'show';
+        project1.style.visibility = 'visible';
+        moreButton1.innerHTML = 'Less Info';
       } else {
-        project.className = '';
-        project.style.visibility = 'hidden';
-        moreButton.innerHTML = 'More Info';
+        project1.className = '';
+        project1.style.visibility = 'hidden';
+        moreButton1.innerHTML = 'More Info';
+      }
+    }
+    moreButton2.onclick = function() {
+      if (project2.getAttribute('style') == 'visibility: hidden;') {
+        project2.className = 'show';
+        project2.style.visibility = 'visible';
+        moreButton2.innerHTML = 'Less Info';
+      } else {
+        project2.className = '';
+        project2.style.visibility = 'hidden';
+        moreButton2.innerHTML = 'More Info';
       }
     }
   </script>
