updating schema for skills

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/site.css">
-
+  <link rel="stylesheet" href="assets/skills.css">
   <title>Karthick Arunachalam</title>
 
 </head>
@@ -128,20 +128,21 @@
       </div>
     </div>
 
-    <div class="container-color section-padding " id="skills">
-      <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">SKILLS</button>
-      <div class="bgimg-1 "></div>
-      <div class="row padding bg-primary ">
-        <div class="col-sm text-center text-white ">
-          <h1 class="display-4 ">Karthick Arunachalam</h1>
-          <p class="lead ">Expertise Java/JavaScript Automation Framework Developer in Quality Engineering with Web Development Exposure!</p>
+    <div class="container-color section-padding" id="skills">
+      <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">SKILLS</button>
+      <div class="bgimg-1"></div>
+      <div class="row padding justify-content-center card-padding bg-azure exp-pad rowbg">
+        <div class="col-lg-3 card-padding shadow">
+        </div>
+        <div class="col-lg-6 shadow">
+          2 of 3 (wider)
         </div>
       </div>
     </div>
 
     <div class="container-color section-padding " id="education">
       <button style="border-radius: 0 !important; " type="button " class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary ">EDUCATION</button>
-      <div class="bgimg-1 "></div>
+      <div class="bgimg-1"></div>
       <div class="row padding bg-primary ">
         <div class="col-sm text-center text-white ">
           <h1 class="display-4 ">Karthick Arunachalam</h1>
