--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
   <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/site.css">
-  <link rel="stylesheet" href="assets/skills.css">
+  <link rel="stylesheet" href="assets/slider.css">
   <title>Karthick Arunachalam</title>
 
 </head>
@@ -132,10 +132,45 @@
       <button style="border-radius: 0 !important;" type="button" class="border-right-0 zero-r border-left-0 btn btn-lg btn-block btn-primary">SKILLS</button>
       <div class="bgimg-1"></div>
       <div class="row padding justify-content-center card-padding bg-azure exp-pad rowbg">
-        <div class="col-lg-3 card-padding shadow">
-        </div>
-        <div class="col-lg-6 shadow">
-          2 of 3 (wider)
+        <div class="col-lg-8 card-padding shadow">
+          <div class="slideshow-container border border-warning">
+
+            <div class="mySlides">
+              <h4 class="text-center border border-warning" style="padding-bottom:5px;">Languages</h4>
+              <div style="padding-top:15px;">
+                <img class="imgstyle zoom" src="assets/images/lan/1.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/6.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/7.png" />
+
+              </div>
+              <div>
+                <img class="imgstyle zoom" src="assets/images/lan/8.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/9.png" />
+                <img class="imgstyle zoom" src="assets/images/lan/10.png" />
+              </div>
+
+            </div>
+
+            <div class="mySlides">
+              <q>But man is not made for defeat. A man can be destroyed but not defeated.</q>
+              <p class="author">- Ernest Hemingway</p>
+            </div>
+
+            <div class="mySlides">
+              <q>I have not failed. I've just found 10,000 ways that won't work.</q>
+              <p class="author">- Thomas A. Edison</p>
+            </div>
+
+            <a class="prev" onclick="plusSlides(-1)">❮</a>
+            <a class="next" onclick="plusSlides(1)">❯</a>
+
+          </div>
+
+          <div class="dot-container">
+            <span class="dot" onclick="currentSlide(1)"></span>
+            <span class="dot" onclick="currentSlide(2)"></span>
+            <span class="dot" onclick="currentSlide(3)"></span>
+          </div>
         </div>
       </div>
     </div>
@@ -161,30 +196,12 @@
       </div>
     </div>
   </div>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
-  </br>
 
-
-
-
-
-
-
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
-  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js " integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
-  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js "></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js "></script>
-  <script src="assets/site.js "></script>
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN " crossorigin="anonymous "></script>
+  <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="assets/site.js"></script>
+  <script src="assets/slider.js"></script>
   <script>
     var moreButton1 = document.getElementById("more-button1");
     var moreButton2 = document.getElementById("more-button2");
